completed cog positioning. added style sheets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<script src="bundle.js"></script>
+	<link rel="stylesheet" type="text/css" href="assets/stylesheets/cog.css" />
 </head>
 <body>
 	<div id='root'/>
