--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title></title>
 	<script src="bundle.js"></script>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/cog.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 </head>
 <body>
 	<div id='root'/>
