--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 </head>
 <body>
-	<div id='root'/>
+	<div id='root'></div>
 </body>
 </html>
