--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>modern art generator</title>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125390017-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'UA-125390017-2');
-	</script>
-	<script src="bundle.js"></script>
-	<link rel="icon" type="image/png" href="./assets/images/favicon.png">
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/cog.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-</head>
-<body>
-	<div id='root'></div>
-</body>
+  <head>
+    <title>modern art generator</title>
+    <script src="bundle.js"></script>
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/cog.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lora"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
